Added endpoint /event_details/report for event_detail_controller
